@@ -66,6 +66,10 @@
     Type: feature
     Changed: install-webcleaner.py
 
+  * Allow redirection to ftp:// links (for download sites)
+    Type: feature
+    Changed: wc/filter/html/HtmlSecurity.py
+
 2.37.1 "True Romance" (released 17.2.2006, windows-only fixes)
 
   * Quote command line arguments when installing under Windows.
